# QtAppTask

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.h  CMakeLists.txt  Parameters.cpp  Parameters.h
